--- a/src/components/TransactionHistory/transactionHistory.module.css
+++ b/src/components/TransactionHistory/transactionHistory.module.css
@@ -1,15 +1,17 @@
 .transactionHistory {
   border-collapse: collapse;
-  width: 95%;
+  width: 600px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   margin: 15px 0;
 }
 
 th {
+  font-weight: 500;
+  font-size: 18px;
   height: 50px;
   background-color: #00bcd5;
-  color: #010101;
+  color: #ffff;
   text-transform: uppercase;
 }
 
@@ -18,7 +20,7 @@ td {
   height: 50px;
   text-align: center;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   color: #434455;
 }
 tr:nth-child(1n) {
